public/analytics-pro/v0.9.0rc2/_sources/reference/tmlt/analytics/metrics/_base/index.rst.txt
:orphan:

..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024


************
_base
************

.. py:module:: tmlt.analytics.metrics._base

.. autoapi-nested-parse::

   Base classes for metrics.











Classes
=======

.. list-table::

   * - :class:`.Metric`
     - A generic metric.
   * - :class:`.MetricOutput`
     - An output of a Metric with additional meta-data.
   * - :class:`.SingleBaselineMetric`
     - Base class for metrics computed from the DP output and a single baseline output.
   * - :class:`.MultiBaselineMetric`
     - Base class for metrics computed from the DP output and multiple baseline outputs.
   * - :class:`.JoinedOutputMetric`
     - Base class for metrics computing value from combined DP and single baseline.
   * - :class:`.ScalarMetric`
     - Base class for metrics computed from outputs containing only one value.

   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: Metric(name, description, baselines)

   Bases: :class:`abc.ABC`

   A generic metric.

   .. note::

       This class is only available on a paid version of Tumult Analytics. If you
       would like to hear more, please contact us at info@tmlt.io.






   .. automethod:: __init__
   .. py:method:: name()
      :property:

      Return the name of the metric.


   .. py:method:: description()
      :property:

      Return the description of the metric.


   .. py:method:: baselines()
      :property:

      Return the baselines used for the metric.


   .. py:method:: format(value)
      :abstractmethod:

      Converts value to human-readable format.


   .. py:method:: check_compatibility_with_program(program)
      :abstractmethod:

      Checks if the metric supports the program.


   .. py:method:: compute(dp_outputs, baseline_outputs)
      :abstractmethod:

      Compute the given metric on the given dp and baseline outputs.

      The baseline_outputs will already be filtered to only include the baselines that
      the metric is supposed to use.

      :param dp_outputs: The differentially private outputs of the program.
      :param baseline_outputs: The outputs of the baseline programs, after filtering to
                               only include the baselines that the metric is supposed to use.


   .. py:method:: __call__(dp_outputs, baseline_outputs)

      Compute the given metric on the given dp and baseline outputs.

      :param dp_outputs: The differentially private outputs of the program.
      :param baseline_outputs: The outputs of the baseline programs.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: MetricOutput

   An output of a Metric with additional meta-data.

   .. note::

       💡 This class is only available on a paid version of Tumult Analytics. If you
       would like to hear more, please contact us at info@tmlt.io.





   .. py:attribute:: name
      :annotation: :str

      The name of the metric.

   .. py:attribute:: description
      :annotation: :str

      The description of the metric.

   .. py:attribute:: baseline
      :annotation: :Union[str, List[str]]

      The name of the baseline program(s) used for the error report.

   .. py:attribute:: metric
      :annotation: :Metric

      The metric that was used.

   .. py:attribute:: value
      :annotation: :Any

      The value of the metric applied to the program outputs.


   .. py:method:: format()

      Return a string representation of this object.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: SingleBaselineMetric(name, description, baselines)

   Bases: :class:`Metric`, :class:`abc.ABC`

   Base class for metrics computed from the DP output and a single baseline output.

   .. note::

       This class is only available on a paid version of Tumult Analytics. If you
       would like to hear more, please contact us at info@tmlt.io.

   Subclasses of ``SingleBaselineMetric`` define a ``compute_for_baseline`` method
   from DP outputs and one baseline's outputs to the metric value.






   .. automethod:: __init__
   .. py:method:: compute_for_baseline(dp_outputs, baseline_outputs)
      :abstractmethod:

      Returns the metric value give the DP and single baseline outputs.


   .. py:method:: compute(dp_outputs, baseline_outputs)

      Compute the given metric on the given dp and baseline outputs.

      The baseline_outputs will already be filtered to only include the baselines
      that the metric is supposed to use.

      :param dp_outputs: The differentially private outputs of the program.
      :param baseline_outputs: The outputs of the baseline programs.


   .. py:method:: name()
      :property:

      Return the name of the metric.


   .. py:method:: description()
      :property:

      Return the description of the metric.


   .. py:method:: baselines()
      :property:

      Return the baselines used for the metric.


   .. py:method:: format(value)
      :abstractmethod:

      Converts value to human-readable format.


   .. py:method:: check_compatibility_with_program(program)
      :abstractmethod:

      Checks if the metric supports the program.


   .. py:method:: __call__(dp_outputs, baseline_outputs)

      Compute the given metric on the given dp and baseline outputs.

      :param dp_outputs: The differentially private outputs of the program.
      :param baseline_outputs: The outputs of the baseline programs.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: MultiBaselineMetric(name, description, baselines)

   Bases: :class:`Metric`, :class:`abc.ABC`

   Base class for metrics computed from the DP output and multiple baseline outputs.

   .. note::

       This class is only available on a paid version of Tumult Analytics. If you
       would like to hear more, please contact us at info@tmlt.io.

   Subclasses of ``MultiBaselineMetric`` define a ``compute_for_multiple_baselines``
   method from DP outputs and a collection of outputs from several baselines to the
   metric value.






   .. automethod:: __init__
   .. py:method:: compute_for_multiple_baselines(dp_outputs, baseline_outputs)
      :abstractmethod:

      Returns the metric value give the DP and multiple baseline outputs.


   .. py:method:: compute(dp_outputs, baseline_outputs)

      Compute the given metric on the given dp and baseline outputs.

      The baseline_outputs will already be filtered to only include the baselines that
      the metric is supposed to use.

      :param dp_outputs: The differentially private outputs of the program.
      :param baseline_outputs: The outputs of the baseline programs, after filtering to
                               only include the baselines that the metric is supposed to use.


   .. py:method:: name()
      :property:

      Return the name of the metric.


   .. py:method:: description()
      :property:

      Return the description of the metric.


   .. py:method:: baselines()
      :property:

      Return the baselines used for the metric.


   .. py:method:: format(value)
      :abstractmethod:

      Converts value to human-readable format.


   .. py:method:: check_compatibility_with_program(program)
      :abstractmethod:

      Checks if the metric supports the program.


   .. py:method:: __call__(dp_outputs, baseline_outputs)

      Compute the given metric on the given dp and baseline outputs.

      :param dp_outputs: The differentially private outputs of the program.
      :param baseline_outputs: The outputs of the baseline programs.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: JoinedOutputMetric(output, join_columns, name, description, baselines)

   Bases: :class:`SingleBaselineMetric`, :class:`abc.ABC`

   Base class for metrics computing value from combined DP and single baseline.

   .. note::

       This class is only available on a paid version of Tumult Analytics. If you
       would like to hear more, please contact us at info@tmlt.io.

   Subclasses of ``JoinedOutputMetric`` define a
   ``compute_on_joined_output`` method which takes in a single dataframe, the
   result of joining the DP and baseline output tables with the given name on
   the given list of columns, and returns the metric value. The joined table is
   the result of performing an *outer* join between the DP and baseline tables
   on the given join columns.



   .. list-table:: Methods

      * - :meth:`.output`
        - Return the name of the run output.
      * - :meth:`.join_columns`
        - Return the name of the join columns.
      * - :meth:`.compute_for_baseline`
        - Computes metric value.
      * - :meth:`.check_compatibility_with_program`
        - Checks if the metric is compatible with the program.
      * - :meth:`.compute_on_joined_output`
        - Compute value from combined dp and baseline output.
      * - :meth:`.compute`
        - Compute the given metric on the given dp and baseline outputs.
      * - :meth:`.name`
        - Return the name of the metric.
      * - :meth:`.description`
        - Return the description of the metric.
      * - :meth:`.baselines`
        - Return the baselines used for the metric.
      * - :meth:`.format`
        - Converts value to human-readable format.
      * - :meth:`.__call__`
        - Compute the given metric on the given dp and baseline outputs.




   .. automethod:: __init__
   .. py:method:: output()
      :property:

      Return the name of the run output.


   .. py:method:: join_columns()
      :property:

      Return the name of the join columns.


   .. py:method:: compute_for_baseline(dp_outputs, baseline_outputs)

      Computes metric value.


   .. py:method:: check_compatibility_with_program(program)

      Checks if the metric is compatible with the program.


   .. py:method:: compute_on_joined_output(joined_output)
      :abstractmethod:

      Compute value from combined dp and baseline output.


   .. py:method:: compute(dp_outputs, baseline_outputs)

      Compute the given metric on the given dp and baseline outputs.

      The baseline_outputs will already be filtered to only include the baselines
      that the metric is supposed to use.

      :param dp_outputs: The differentially private outputs of the program.
      :param baseline_outputs: The outputs of the baseline programs.


   .. py:method:: name()
      :property:

      Return the name of the metric.


   .. py:method:: description()
      :property:

      Return the description of the metric.


   .. py:method:: baselines()
      :property:

      Return the baselines used for the metric.


   .. py:method:: format(value)
      :abstractmethod:

      Converts value to human-readable format.


   .. py:method:: __call__(dp_outputs, baseline_outputs)

      Compute the given metric on the given dp and baseline outputs.

      :param dp_outputs: The differentially private outputs of the program.
      :param baseline_outputs: The outputs of the baseline programs.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: ScalarMetric(output, name, description, column = None, baselines = None)

   Bases: :class:`SingleBaselineMetric`, :class:`abc.ABC`

   Base class for metrics computed from outputs containing only one value.

   .. note::

       This class is only available on a paid version of Tumult Analytics. If you
       would like to hear more, please contact us at info@tmlt.io.

   Subclasses of ``ScalarMetric`` define a ``compute_on_scalar`` method
   which takes two values, each one taken from the given column of the given
   output, and returns a metric value. The given output *must* contain a single
   row in both the DP and baseline outputs.



   .. list-table:: Methods

      * - :meth:`.output`
        - Return the name of the run output.
      * - :meth:`.column`
        - Return the name of the value column, if it is set.
      * - :meth:`.check_compatibility_with_program`
        - Checks if the metric is compatible with the program.
      * - :meth:`.compute_for_baseline`
        - Returns the metric value give the DP and single baseline outputs.
      * - :meth:`.compute_on_scalar`
        - Compute metric value from DP and baseline values.
      * - :meth:`.compute`
        - Compute the given metric on the given dp and baseline outputs.
      * - :meth:`.name`
        - Return the name of the metric.
      * - :meth:`.description`
        - Return the description of the metric.
      * - :meth:`.baselines`
        - Return the baselines used for the metric.
      * - :meth:`.format`
        - Converts value to human-readable format.
      * - :meth:`.__call__`
        - Compute the given metric on the given dp and baseline outputs.




   .. automethod:: __init__
   .. py:method:: output()
      :property:

      Return the name of the run output.


   .. py:method:: column()
      :property:

      Return the name of the value column, if it is set.


   .. py:method:: check_compatibility_with_program(program)

      Checks if the metric is compatible with the program.


   .. py:method:: compute_for_baseline(dp_outputs, baseline_outputs)

      Returns the metric value give the DP and single baseline outputs.


   .. py:method:: compute_on_scalar(dp_value, baseline_value)
      :abstractmethod:

      Compute metric value from DP and baseline values.


   .. py:method:: compute(dp_outputs, baseline_outputs)

      Compute the given metric on the given dp and baseline outputs.

      The baseline_outputs will already be filtered to only include the baselines
      that the metric is supposed to use.

      :param dp_outputs: The differentially private outputs of the program.
      :param baseline_outputs: The outputs of the baseline programs.


   .. py:method:: name()
      :property:

      Return the name of the metric.


   .. py:method:: description()
      :property:

      Return the description of the metric.


   .. py:method:: baselines()
      :property:

      Return the baselines used for the metric.


   .. py:method:: format(value)
      :abstractmethod:

      Converts value to human-readable format.


   .. py:method:: __call__(dp_outputs, baseline_outputs)

      Compute the given metric on the given dp and baseline outputs.

      :param dp_outputs: The differentially private outputs of the program.
      :param baseline_outputs: The outputs of the baseline programs.







